tests/baselines/reference/accessorWithRestParam.errors.txt
<<<<<<< HEAD
accessorWithRestParam.ts(2,10): error TS1053: 'set' accessor cannot have rest parameter.
accessorWithRestParam.ts(3,17): error TS1053: 'set' accessor cannot have rest parameter.
=======
==== tests/cases/compiler/accessorWithRestParam.ts (2 errors) ====
    class C {
        set X(...v) { }
              ~~~~
!!! error TS1053: 'set' accessor cannot have rest parameter.
        static set X(...v2) { }
                     ~~~~~
!!! error TS1053: 'set' accessor cannot have rest parameter.
    }
>>>>>>> b9bbbf1... Improve error baseline reporting
